[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "django-adminplus"
version = "0.6"
authors = [{name = "James Socol", email = "me@jamessocol.com"}]
requires-python = ">= 3.7"
license = {file = "LICENSE"}
description = "Add new pages to the Django admin."
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/jsocol/django-adminplus"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}
